# quick_dock

./: .gitignore  Cargo.toml  README.md  build_windows_release.bat  quick_dock.toml
env/: quick_dock.ini
src/: app.rs  commands.rs  config.rs  constants.rs  layout.rs  main.rs  model.rs  platform.rs  tray.rs  ui.rs  widgets.rs
