[package]
name = "quick_dock"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["glow", "default_fonts"] }
arboard = "3.6"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_System_SystemInformation", "Win32_System_Registry", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(windows)'.dependencies]
tray-icon = "0.21"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
